fix spacing on contact-template

--- a/wp-content/themes/clinicoeurs/resources/sass/_footer.scss
+++ b/wp-content/themes/clinicoeurs/resources/sass/_footer.scss
@@ -26,8 +26,11 @@ footer {
   & .footer{
     &__container {
       margin-block-end: 1rem;
+      @include mq(tablet){
+        margin-block-end: 0;
+      }
       & > * {
-        margin-block-end: 0.5rem;
+        margin-block-end: 1rem;
       }
     }
 
