--- a/wp-content/themes/clinicoeurs/resources/sass/contact/_contact.scss
+++ b/wp-content/themes/clinicoeurs/resources/sass/contact/_contact.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
-  margin-block-start: 5.5rem;
+  margin-block: 5.5rem;
   & section, &  p, & img, & h2{
     margin: 0;
     padding: 0;
