--- a/wp-content/themes/clinicoeurs/resources/sass/homepage/_product.scss
+++ b/wp-content/themes/clinicoeurs/resources/sass/homepage/_product.scss
@@ -14,6 +14,7 @@
       display: grid;
       grid-template-columns: repeat(2, auto);
       margin-block: 4rem;
+      margin-block-end: 7rem;
     }
 
     &__title {
