--- a/wp-content/themes/clinicoeurs/resources/sass/homepage/_volunteering.scss
+++ b/wp-content/themes/clinicoeurs/resources/sass/homepage/_volunteering.scss
@@ -2,6 +2,9 @@
 
 .home {
   .volunteering__bg {
+    @include mq(tablet){
+    margin-block: 9rem;
+  }
     margin-block: 5rem;
     width: 100vw;
     display: flex;
